everything based in javascript now

--- a/day1.html
+++ b/day1.html
@@ -8,11 +8,9 @@
     </head>
     
     <body>
-        <h1>hello world!</h1>
+        <h1>calculate some stuff</h1>
         <p>
-            <input type="text" size="50" id="text1"></input>
-            <button onclick="calculate()">calculate</button>
-            <div id="text1_out"></div>
+            <div class="calculator" id="calc1"></div>
         </p>
         
     </body>
