--- a/apple-calculator.html
+++ b/apple-calculator.html
@@ -1,47 +1,12 @@
 <html>
-    <head>
-        <title>apple calculator lookalike</title>
-    
-        <link href="apple-calc.css" rel="stylesheet"></link>
-    </head>
-    <body>
-        <div class="calculator">
-            <input type="text"></input>
-            <div>
-                <button>MC</button>
-                <button>M+</button>
-                <button>M-</button>
-                <button>MR</button>
-            </div>
-            <div>
-                <button>C</button>
-                <button>+/-</button>
-                <button>/</button>
-                <button>x</button>
-            </div>
-            <div>
-                <button>7</button>
-                <button>8</button>
-                <button>9</button>
-                <button>-</button>
-            </div>
-            <div>
-                <button>4</button>
-                <button>5</button>
-                <button>6</button>
-                <button>+</button>
-            </div>
-            <div>
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
-                <button>=</button>
-            </div>
-            <div>
-                <button class="long">0</button>
-                <button>.</button>
-                <button>=</button>
-            </div>
-        </div>
-    </body>
+<head>
+    <title>apple calc lookalike</title>
+    <script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+    <script src="apple-calculator.js"></script>
+    <link href = "apple-calculator.css" rel = "stylesheet"></link>
+</head>
+<Body>
+
+    <div class = "Calculator"></div>
+</Body>
 </html>
