--- a/graphcalc.html
+++ b/graphcalc.html
@@ -4,9 +4,13 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script src="http://web.mit.edu/6.mitx/www/calculator.js"></script>
 <script src="graphcalc.js"></script>
-<link rel="stylesheet" type="text/css" href="graphcalc.css">
+<link rel="stylesheet" type="text/css" href="graphcalc.css"></link>
+<script src="apple-calculator.js"></script>
+<link href = "apple-calculator.css" rel = "stylesheet"></link>
 </head>
 <body>
+    <div class = "Calculator"></div>
 <div class="graphcalc"></div>
+
 </body>
 </html>
