--- a/visual.html
+++ b/visual.html
@@ -8,6 +8,7 @@
 <body>
     <div class="chart-container"></div>
     
+    <script src="data.js"></script>
     <script src="visual.js"></script>
     </body>
 
