--- a/day8.html
+++ b/day8.html
@@ -105,7 +105,7 @@ function click(p2){
     svg.append("circle")
         .attr("cy",p2[1])
         .attr("cx",p2[0])
-        .attr("fill","#eeaaaa")
+        .attr("fill","rgba(255,175,175,.6)")
         .attr("r",5);
     
 }
