--- a/knapsack/knapsack.html
+++ b/knapsack/knapsack.html
@@ -2,11 +2,13 @@
 <head>
     <title>fooood</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
     <script src="knapsack.js"></script>
-    <link href = "knapsack.css" rel = "stylesheet"></link>
+    <link href = "knapsack.css" rel = "stylesheet">
+    <link href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" rel="stylesheet">
 </head>
 <body>
-    <div class="knapsack" data-max weight="30">
+    <div class="knapsack" data-max-weight="30">
         <img src="img/cake.png" data-value="20" data-weight="5" data-name="cake">
         <img src="img/melonbread.png" data-value="2" data-weight="4" data-name="melon bread">
         <img src="img/popsicle.png" data-value="4" data-weight="2" data-name="popsicle">
