--- a/knapsack/knapsack.html
+++ b/knapsack/knapsack.html
@@ -18,6 +18,6 @@
         <img src="img/tamagosushi.png" data-value="7" data-weight="7" data-name="tamago sushi">
         <img src="img/tonkatsuramen.png" data-value="15" data-weight="12" data-name="tonkatsu ramen">
     </div>
-    <br><br><p style="text-align:center">images from <a href="http://www.pixiv.net/member_illust.php?id=1859938">here</a></p>
+    <br><br><p style="text-align:center">food images from <a href="http://www.pixiv.net/member_illust.php?id=1859938">here</a></p>
 </body>
 </html>
