--- a/knapsack/knapsack.html
+++ b/knapsack/knapsack.html
@@ -8,7 +8,7 @@
     <link href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" rel="stylesheet">
 </head>
 <body>
-    <div class="knapsack" data-max-weight="30">
+    <div class="knapsack" data-max-weight="25">
         <img src="img/cake.png" data-value="20" data-weight="5" data-name="cake">
         <img src="img/melonbread.png" data-value="2" data-weight="4" data-name="melon bread">
         <img src="img/popsicle.png" data-value="4" data-weight="2" data-name="popsicle">
@@ -18,6 +18,7 @@
         <img src="img/tamagosushi.png" data-value="7" data-weight="7" data-name="tamago sushi">
         <img src="img/tonkatsuramen.png" data-value="15" data-weight="12" data-name="tonkatsu ramen">
     </div>
-    <br><br><p style="text-align:center">food images from <a href="http://www.pixiv.net/member_illust.php?id=1859938">here</a></p>
+    <br><br><p style="text-align:center">food images from <a href="http://www.pixiv.net/member_illust.php?id=1859938">here</a>, 
+        person images drawn by me</p>
 </body>
 </html>
