--- a/knapsack/knapsack.html
+++ b/knapsack/knapsack.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <title>fooood</title>
+    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
     <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
     <script src="knapsack.js"></script>
